# totp

./: .gitignore  CMakeLists.txt  README.md  create_qr_code.sh  main.cpp  otp.cpp  otp.h  otpauthuri.cpp  otpauthuri.h  totp.cpp  totp.h
